<resources>
    <!--name of the application-->
    <string name="app_name">The Adler Android App</string>

    <!--file name of shared preference-->
    <string name="saved_question">com.example.mrsam.adlerandroidapp_saved_question</string>

    <!--shared preferences keys-->
    <string name="question_key">question</string>

    <!-- names for activities-->
    <string name="question_activity">Your Question</string>
    <string name="movie_list_activity">Movies</string>
    <string name="movie_detail_activity">Movie Details</string>
    <string name="about_activity">About</string>
    <string name="traffic_cam_activity">Traffic Cameras</string>
    <string name="traffic_map">Traffic Map</string>
    <string name="user_location">Your Location</string>

    <!--open/close drawer actions - for accessibility purposes -->
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <!--action menu-->
    <string name="settings_menu">Settings</string>
    <string name="search_menu">Search</string>

    <!--Strings for MainActivity -->
    <string name="about">About the Author</string>
    <string name="bio">Long story short: I used to be a laboratory scientist; now I\'m not.</string>
    <string name="ask">Ask Me Anything:</string>
    <string name="default_question">Sup?</string>
    <string name="btn_cheers">Cheers!</string>
    <string name="btn_maps">Maps!</string>
    <string name="zombie">Zombie!</string>
    <string name="btntxt">Ask!</string>
    <string name="question_text">Whatever</string>

    <!--Strings for ReceiveQuestion Activity-->
    <string name="question_heading">Your Question:</string>
    <string name="question_placeholder">(Question text)</string>
    <string name="answer_heading">My Answer:</string>
    <string name="default_answer">I have no idea, man!</string>

    <!--Strings for About Activity -->
    <string name="filler">Lorem ipsum dolor amet food truck crucifix microdosing selfies pork belly.
        Paleo vinyl 3 wolf moon, literally bitters beard try-hard retro ugh small batch disrupt
        enamel pin post-ironic mixtape. Woke scenester echo park schlitz vegan organic kale chips
        mlkshk, locavore air plant slow-carb retro. Fixie af squid synth, bitters pug vexillologist
        kombucha kinfolk flexitarian tote bag knausgaard. Paleo fanny pack snackwave marfa prism,
        etsy pabst. Umami subway tile cliche, listicle cloud bread cray shoreditch taiyaki food
        truck.</string>

</resources>
