<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/about_link"
            android:title="@string/about_activity"
            android:icon="@drawable/ic_info_black_24dp"/>

        <item
            android:id="@+id/movie_link"
            android:title="@string/movie_list_activity"
            android:icon="@drawable/ic_movie_black_24dp"/>
        <item
            android:id="@+id/traffic_camera_link"
            android:icon="@drawable/baseline_traffic_black_18dp"
            android:title="@string/traffic_cam_activity"/>
        <item
            android:id="@+id/map_link"
            android:icon="@drawable/baseline_map_black_18dp"
            android:title="@string/user_location" />
    </group>
</menu>